# sms-api

./: .dockerignore  .dockerignore-sms  .gitignore  .opencodeignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AGENTS.md  ATLANTIS_TUTORIAL.md  BIGRAPH_LOOM.md  BIOMODELS_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  Claude.md  Dockerfile  Dockerfile-api  Dockerfile-gateway  Dockerfile-nextflow  Dockerfile-ptools  Dockerfile-sms  Dockerfile-worker  Dockerfile_sms  INTEGRATION_TEST_CONTEXT.md  LICENSE  Makefile  PBG_WRAPPERS.md  PLAN.md  PLAN_PLACEHOLDER_PARCA.md  PLAN_REMAINING.md  PTOOLS_LATENCY_MITIGATION.md  PTOOLS_VERIFICATION.md  README.md  REST_PROCESS.md  TODO_40.md  UPDATES.md  __smsdb  client-generator-config.yml  docker-compose.yml  index.html  mkdocs.yml  (+7 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.openapi-generator/: FILES
AWS_S3_SETUP/: index.html
QUMULO_SETUP/: index.html
alembic/: env.py
app/: app.py  app_data_service.py  cli.py  cli_app.py  cli_theme.py  client_wrapper.py  gui.py  notebook_utils.py  tui.py
assets/: app_names.json  base_simulation_config.json  example_experiment.json  example_experiment_response.json  expected_columns.json  expected_times.json  latest_commit.txt  observables_baseline.json  sms_api_colony.json  sms_base_simulation_config.json  sms_colony.json  sms_default.json  sms_experiment.json  sms_multigen_analysis.json  sms_single_cell.json  sms_single_cell_ADJUSTED_TEST.json  submodule_commit.txt  wcecoli_figure2_setD4.json  wcecoli_figure2_setD4_scaled.json  wcecoli_variants.sh
cloud/: README.md
data_model/: base.py  connection.py  gateway.py  messages.py  simulation.py  vivarium.py
demos/: cd1.py
dev/: .TODO
docker/: Dockerfile.gateway  Dockerfile.server
docs/: DESIGN-workspace-decoupling.md  HANDOFF-ALEX-WORKBENCH.md  Makefile  PRE-DEMO-MASTER-PLAN.md  PRE-DEMO-PLAN.md  QUMULO_SETUP.md  aws-batch-architecture.md  aws-batch-learnings.md  deployment-stanford-test.md  index.md  modules.md  plan-multi-arch-build-pipeline.md  plan-remove-slurm-fsx-stanford-test.md  plan-single-container-k8s-job.md  requirements.txt
documentation/: README.md  requirements.docs.txt
gateway/: app.py  main.py
kustomize/: README_minikube.md
libsms/: README.md  pyproject.toml
libsms/libsms/api/analysis_v_ecoli/: download_analysis_output.py  get_analysis_analyses_id_get.py  get_available_analyses.py  run_analysis.py  upload_analysis_module_analyses_put.py
libsms/libsms/api/configurations_v_ecoli/: delete_simulation_config.py  get_simulation_config.py  list_simulation_configs.py  upload_analysis_config.py  upload_simulation_config.py
libsms/libsms/api/simulations_v_ecoli/: delete_experiment.py  get_data.py  get_experiment.py  get_vecoli_simulation_log.py  get_vecoli_simulation_status.py  list_experiments.py  run_experiment.py
libsms/libsms/api/sms_api/: get_version_version_get.py  home_get.py
libsms/libsms/models/: __init__.py  analysis_config.py  analysis_config_options.py  analysis_config_options_multidaughter.py  analysis_config_options_multigeneration.py  analysis_config_options_multiseed.py  analysis_config_options_multivariant.py  analysis_config_options_multivariant_additional_property.py  analysis_job.py  body_run_experiment.py  body_run_experiment_metadata_type_0.py  body_upload_analysis_module_analyses_put.py  config_overrides.py  config_overrides_analysis_options.py  config_overrides_emitter_arg.py  config_overrides_flow.py  config_overrides_initial_state.py  config_overrides_parca_options.py  config_overrides_process_configs.py  config_overrides_spatial_environment_config.py  config_overrides_swap_processes.py  config_overrides_topology.py  config_overrides_variants.py  config_overrides_variants_additional_property.py  config_overrides_variants_additional_property_additional_property.py  ecoli_experiment_dto.py  ecoli_experiment_dto_metadata.py  ecoli_experiment_request_dto.py  job_status.py  simulation_configuration.py  simulation_configuration_analysis_options.py  simulation_configuration_emitter_arg.py  simulation_configuration_flow.py  simulation_configuration_initial_state.py  simulation_configuration_parca_options.py  simulation_configuration_process_configs.py  simulation_configuration_spatial_environment_config.py  simulation_configuration_swap_processes.py  simulation_configuration_topology.py  simulation_configuration_variants_type_0.py  (+4 more)
modules/: index.html
notebooks/: demo_0.py
notes/: hpc.md  perturbation.md
orig-monorepo/: .gitignore  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
reports/: REST_PROCESS_REPORT.html  index.html
sms-api-gateway/: .gitignore  Dockerfile.gateway  Makefile  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
sms-api-gateway/common/: auth.py  users.py
sms-api-gateway/common/encryption/: keydist.py  storage.py
sms-api-gateway/common/managers/: __init__.py  db.py  pickle.py
sms-api-gateway/data_model/: api.py  base.py
sms-api-gateway/deployment/storage/: file_service_gcs.py
sms-api-gateway/deployment/temporal/: __init__.py
sms-api-gateway/gateway/: app.py  broadcasting.py  deps.edn  dispatch.py  gateway.clj  main.py  socket.py  sockets.py
sms-api-gateway/gateway/antibiotics/: router.py
sms-api-gateway/gateway/biomanufacturing/: router.py
sms-api-gateway/gateway/core/: client.py  router.py  socket.py  test.py
sms-api-gateway/gateway/evolve/: router.py
sms-api-gateway/gateway/handlers/: antibiotics.py  db.py  db_io.py  dispatch.py  openapi_spec.py  simulation.py  streaming.py
sms-api-gateway/gateway/inference/: router.py
sms-api-gateway/gateway/sensitivity_analysis/: router.py
sms-api-gateway/notebooks/: connection.ipynb  dashboard.html  gateway_sandbox.ipynb  simdata.ipynb  state_preparation.ipynb  widgets.py
sms-api-gateway/resources/client_templates/: index.html
sms-api-gateway/resources/config/: default.json
sms-api-gateway/server/: dispatch.py  main.py
sms-api-gateway/spec/: openapi.json
sms-api-gateway/tests/: gatway_sandbox.ipynb  test_client.py
(+1353 files in other folders)
